skeleton of website added to page

--- a/supportUs/index.html
+++ b/supportUs/index.html
@@ -20,5 +20,6 @@
     <link href="/styles/output.css" rel="stylesheet" />
     <title>Support us page</title>
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
