--- a/loginPage/index.html
+++ b/loginPage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,6 +16,78 @@
     />
     <link href="/styles/output.css" rel="stylesheet" />
     <title>User login page</title>
+    <script type="module" src="/js/index.js"></script>
   </head>
-  <body></body>
+  <body class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-300">
+    <nav class="text-white">
+      <div class="container mx-auto justify-between items-center md:flex">
+        <div class="flex justify-between md:flex md:justify-between">
+          <a href="/index.html">
+            <img
+              src="/images/websiteLogo.png"
+              alt="website logo"
+              class="h-20 w-30"
+          /></a>
+          <div class="md:hidden flex items-center px-10">
+            <button type="button" class="mobile-menu-button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-8 h-8"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+
+        <div class="relative flex md:ml-4 md:px-10">
+          <input
+            type="search"
+            class="relative m-0 block flex-auto rounded border border-solid border-neutral-200 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-light leading-[1.6] text-surface outline-none transition duration-200 ease-in-out placeholder:text-neutral-500 focus:z-[3] focus:border-primary focus:shadow-inset focus:outline-none motion-reduce:transition-none dark:border-white/10 dark:text-white dark:placeholder:text-neutral-200 dark:autofill:shadow-autofill dark:focus:border-primary"
+            placeholder="Search for items"
+            aria-label="Search"
+            id="exampleFormControlInput2"
+            aria-describedby="button-addon2"
+          />
+          <span
+            class="flex items-center whitespace-nowrap px-3 py-[0.25rem] text-surface dark:border-neutral-400 dark:text-white [&>svg]:h-5 [&>svg]:w-5"
+            id="button-addon2"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+              />
+            </svg>
+          </span>
+        </div>
+        <div
+          class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
+        >
+          <a href="#" class="hover:text-gray-400 py-2 px-5 block">Auction</a>
+          <a href="#" class="hover:text-gray-400 py-2 px-5 block">Login</a>
+          <a
+            href="#"
+            class="hover:text-gray-400 py-2 px-5 block border rounded-md"
+            >Register</a
+          >
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
