--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Auction Website Home Page</title>
   </head>
 
-  <body class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-300">
+  <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
     <nav class="text-white">
       <div class="container mx-auto justify-between items-center md:flex">
         <div class="flex justify-between md:flex md:justify-between">
@@ -56,7 +56,7 @@
           <input
             type="search"
             class="relative m-0 block flex-auto rounded border border-solid border-neutral-200 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-light leading-[1.6] text-surface outline-none transition duration-200 ease-in-out placeholder:text-neutral-500 focus:z-[3] focus:border-primary focus:shadow-inset focus:outline-none motion-reduce:transition-none dark:border-white/10 dark:text-white dark:placeholder:text-neutral-200 dark:autofill:shadow-autofill dark:focus:border-primary"
-            placeholder="Search for items"
+            placeholder="Search for items.."
             aria-label="Search"
             id="exampleFormControlInput2"
             aria-describedby="button-addon2"
@@ -93,5 +93,112 @@
         </div>
       </div>
     </nav>
+    <div class="relative">
+      <img
+        src="/images/christies-auction.webp"
+        class="absolute inset-0 object-cover w-full h-full"
+        alt=""
+      />
+      <div class="relative bg-gray-900 bg-opacity-90">
+        <div
+          class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20 h-screen"
+        >
+          <div class="flex flex-col items-center justify-between xl:flex-row">
+            <div class="w-full max-w-xl mb-12 xl:mb-0 xl:pr-16 xl:w-7/12">
+              <h2
+                class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-orange-200 sm:text-4xl sm:leading-none"
+              >
+                The Collectible's Auction. <br class="hidden md:block" />
+              </h2>
+              <p class="max-w-xl mb-4 text-base text-gray-400 md:text-lg">
+                Buy and sell items at an instance. We provide a platform for you
+                to auction your items and get the best price for them.
+              </p>
+              <div class="flex justify-center py-2 gap-5">
+                <a
+                  href="/auctionPage/"
+                  class="text-black font-semibold flex items-center justify-center w-50 bg-orange-200 px-5 rounded-lg shadow-lg hover:bg-slate-600 transition duration-200"
+                >
+                  Auction
+                </a>
+                <a
+                  href="/loginPage/"
+                  class="text-black font-semibold flex items-center justify-center w-50 bg-orange-200 px-5 py-1 rounded-lg shadow-lg hover:bg-slate-600 transition duration-200"
+                >
+                  Login
+                </a>
+              </div>
+            </div>
+            <div class="w-full max-w-xl xl:px-8 xl:w-5/12">
+              <div class="bg-slate-800 rounded shadow-2xl p-7 sm:p-10">
+                <h3
+                  class="mb-4 text-xl font-light text-white sm:text-center sm:mb-6 sm:text-2xl"
+                >
+                  Sign up for updates
+                </h3>
+                <form>
+                  <div class="mb-1 sm:mb-2">
+                    <label
+                      for="firstName"
+                      class="text-gray-400 inline-block mb-1 font-medium"
+                      >First name</label
+                    >
+                    <input
+                      placeholder="Your first name"
+                      required=""
+                      type="text"
+                      class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-sm"
+                      id="firstName"
+                      name="firstName"
+                    />
+                  </div>
+                  <div class="mb-1 sm:mb-2">
+                    <label
+                      for="lastName"
+                      class="text-gray-400 inline-block mb-1 font-medium"
+                      >Last name</label
+                    >
+                    <input
+                      placeholder="Your last name"
+                      required=""
+                      type="text"
+                      class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white rounded-lg shadow-lg"
+                      id="lastName"
+                      name="lastName"
+                    />
+                  </div>
+                  <div class="mb-1 sm:mb-2">
+                    <label
+                      for="email"
+                      class="text-gray-400 inline-block mb-1 font-medium"
+                      >E-mail</label
+                    >
+                    <input
+                      placeholder="your.email@example.com"
+                      required=""
+                      type="text"
+                      class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-lg"
+                      id="email"
+                      name="email"
+                    />
+                  </div>
+                  <div class="mt-4 mb-2 sm:mb-4">
+                    <button
+                      type="submit"
+                      class="bg-orange-200 inline-flex items-center justify-center w-full h-12 px-6 font-medium tracking-wide text-black transition duration-200 rounded shadow-lg hover:bg-slate-500"
+                    >
+                      Subscribe
+                    </button>
+                  </div>
+                  <p class="text-xs font-light text-gray-200 sm:text-sm">
+                    We respect your privacy. Unsubscribe at any time.
+                  </p>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
