--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/navBar/index.js"></script>
     <title>Auction Website Home Page</title>
   </head>
 
