skeleton of page and navbar added , fonts added

--- a/registerPage/index.html
+++ b/registerPage/index.html
@@ -19,9 +19,9 @@
     />
     <link href="/styles/output.css" rel="stylesheet" />
     <title>User register page</title>
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/navBar/index.js"></script>
   </head>
-  <body class="min-h-screen bg-gradient-to-b from-slate-700 to-slate-300">
+  <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
     <nav class="text-white">
       <div class="container mx-auto justify-between items-center md:flex">
         <div class="flex justify-between md:flex md:justify-between">
