--- a/registerPage/index.html
+++ b/registerPage/index.html
@@ -82,10 +82,14 @@
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
         >
-          <a href="#" class="hover:text-gray-400 py-2 px-5 block">Auction</a>
-          <a href="#" class="hover:text-gray-400 py-2 px-5 block">Login</a>
+          <a href="/auctionPage/" class="hover:text-gray-400 py-2 px-5 block"
+            >Auction</a
+          >
+          <a href="/loginPage/" class="hover:text-gray-400 py-2 px-5 block"
+            >Login</a
+          >
           <a
-            href="#"
+            href="/registerPage/"
             class="hover:text-gray-400 py-2 px-5 block border rounded-md"
             >Register</a
           >
