Search bar removed

--- a/loginPage/index.html
+++ b/loginPage/index.html
@@ -48,34 +48,6 @@
           </div>
         </div>
 
-        <div class="relative flex md:ml-4 md:px-10">
-          <input
-            type="search"
-            class="relative m-0 block flex-auto rounded border border-solid border-neutral-200 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-light leading-[1.6] text-surface outline-none transition duration-200 ease-in-out placeholder:text-neutral-500 focus:z-[3] focus:border-primary focus:shadow-inset focus:outline-none motion-reduce:transition-none dark:border-white/10 dark:text-white dark:placeholder:text-neutral-200 dark:autofill:shadow-autofill dark:focus:border-primary"
-            placeholder="Search for items"
-            aria-label="Search"
-            id="exampleFormControlInput2"
-            aria-describedby="button-addon2"
-          />
-          <span
-            class="flex items-center whitespace-nowrap px-3 py-[0.25rem] text-surface dark:border-neutral-400 dark:text-white [&>svg]:h-5 [&>svg]:w-5"
-            id="button-addon2"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
-              />
-            </svg>
-          </span>
-        </div>
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
         >
@@ -109,7 +81,11 @@
             to Register if you don't have an account with us.
           </p>
 
-          <form class="space-y-1 md:space-y-6 group" novalidate>
+          <form
+            class="space-y-1 md:space-y-6 group"
+            action="/profile/editProfile/"
+            novalidate
+          >
             <div>
               <label
                 for="email"
@@ -121,15 +97,14 @@
                 name="email"
                 id="email"
                 class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-2.5 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full"
-                placeholder="E-mail"
                 required
                 pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
               />
               <span
                 class="mt-2 hidden text-sm text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block"
               >
-                Please enter a valid email address with the domain noroff.no or
-                stud.noroff.no.
+                Please enter a valid email address with the domain @noroff.no or
+                @stud.noroff.no.
               </span>
             </div>
             <div>
@@ -142,7 +117,6 @@
                 type="password"
                 name="password"
                 id="password"
-                placeholder="••••••••"
                 class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-3 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full"
                 minlength="8"
                 required
