--- a/registerPage/index.html
+++ b/registerPage/index.html
@@ -51,34 +51,6 @@
           </div>
         </div>
 
-        <div class="relative flex md:ml-4 md:px-10">
-          <input
-            type="search"
-            class="relative m-0 block flex-auto rounded border border-solid border-neutral-200 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-light leading-[1.6] text-surface outline-none transition duration-200 ease-in-out placeholder:text-neutral-500 focus:z-[3] focus:border-primary focus:shadow-inset focus:outline-none motion-reduce:transition-none dark:border-white/10 dark:text-white dark:placeholder:text-neutral-200 dark:autofill:shadow-autofill dark:focus:border-primary"
-            placeholder="Search for items"
-            aria-label="Search"
-            id="exampleFormControlInput2"
-            aria-describedby="button-addon2"
-          />
-          <span
-            class="flex items-center whitespace-nowrap px-3 py-[0.25rem] text-surface dark:border-neutral-400 dark:text-white [&>svg]:h-5 [&>svg]:w-5"
-            id="button-addon2"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
-              />
-            </svg>
-          </span>
-        </div>
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
         >
@@ -96,5 +68,111 @@
         </div>
       </div>
     </nav>
+    <div class="flex justify-center py-20">
+      <div
+        class="w-full rounded-lg sm:max-w-md xl:p-0 bg-slate-800 flex justify-center shadow-xl"
+      >
+        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+          <h1
+            class="text-xl font-bold leading-tight tracking-tight md:text-2xl text-orange-200 text-center"
+          >
+            Client Register
+          </h1>
+          <p class="text-sm text-gray-500 dark:text-gray-400 text-center">
+            Hello ! We are excited to have you here. Please fill in the form
+            below to create an account with us.
+          </p>
+
+          <form class="space-y-1 md:space-y-6 group" action="/profile/editProfile/" novalidate>
+            <div>
+              <label
+                for="name"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Full name</label
+              >
+              <input
+                type="name"
+                name="name"
+                id="name"
+                class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-2.5 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full""
+                required
+              />
+              <span
+                class="mt-2 hidden text-sm text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block"
+              >
+                Please enter a valid email address with the domain @noroff.no or
+                @stud.noroff.no.
+              </span>
+            </div>
+            <div>
+              <label
+                for="email"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >E-mail</label
+              >
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-2.5 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full"
+                required
+                pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
+              />
+              <span
+                class="mt-2 hidden text-sm text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block"
+              >
+                Please enter a valid email address with the domain @noroff.no or
+                @stud.noroff.no.
+              </span>
+            </div>
+            <div>
+              <label
+                for="password"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Password</label
+              >
+              <input
+                type="password"
+                name="password"
+                id="password"
+                class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-3 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full"
+                minlength="8"
+                required
+              />
+              <span
+                class="mt-2 hidden text-sm text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block"
+              >
+                Your password has to be atleast 8 characters long.
+              </span>
+            </div>
+            <div class="flex items-center justify-between"></div>
+            <button
+              type="submit"
+              class="w-full text-black bg-orange-200 font-medium rounded-lg text-sm py-3 text-center hover:bg-slate-600 transition duration-200 group-invalid:pointer-events-none group-invalid:opacity-30"
+            >
+              Create Account
+            </button>
+            <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+              Already have an account?
+              <a
+                href="/loginPage/"
+                class="font-medium hover:underline text-orange-200"
+                >Login here</a
+              >
+            </p>
+            <div class="text-white font-light">
+              <h3 class="font-semibold">Email must contain:</h3>
+                <p class="block text-light px-2">&bull; @stud.noroff.no</span>
+                <p class="block px-2">&bull; @noroff.no</span>
+            </div>
+            <div class="text-white font-light">
+              <h3 class="font-semibold">Password must contain:</h3>
+                <p class="block text-light px-2">&bull; Atleast 8 characters</span>
+                <p class="block px-2">&bull; For safety : Uppercase, lowercase letters and numbers</span>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
