--- a/auctionPage/index.html
+++ b/auctionPage/index.html
@@ -21,7 +21,10 @@
     <title>Auction page with items</title>
     <script type="module" src="/js/navBar/index.js"></script>
   </head>
+
   <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
+    <!-- Navigation bar -->
+
     <nav class="text-white">
       <div class="container mx-auto justify-between items-center md:flex">
         <div class="flex justify-between md:flex md:justify-between">
@@ -68,5 +71,127 @@
         </div>
       </div>
     </nav>
+    <div class="border-b border-gray-500"></div>
+
+    <!-- Auction items -->
+
+    <h1 class="text-white text-2xl text-center m-10">Auctioned Items</h1>
+
+    <div class="flex justify-center flex-wrap gap-10">
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover hover"
+        />
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full transition hover:bg-lime-800 shadow-lg"
+        >
+          Bid
+        </div>
+      </div>
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover"
+        />
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full"
+        >
+          Bid
+        </div>
+      </div>
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover"
+        />
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full"
+        >
+          Bid
+        </div>
+      </div>
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover"
+        />
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full"
+        >
+          Bid
+        </div>
+      </div>
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover"
+        />
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full"
+        >
+          Bid
+        </div>
+      </div>
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover"
+        />
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full"
+        >
+          Bid
+        </div>
+      </div>
+    </div>
   </body>
 </html>
