--- a/loginPage/index.html
+++ b/loginPage/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
     </nav>
-
+    <div class="border-b border-gray-500"></div>
     <div class="flex justify-center py-20">
       <div
         class="w-full rounded-lg sm:max-w-md xl:p-0 bg-slate-800 flex justify-center shadow-xl"
