renamed js nav file and reroutered html files to it

--- a/auctionPage/index.html
+++ b/auctionPage/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/f82c4356c6.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="/js/navBar/index.js"></script>
+    <script type="module" src="/js/navBar/index.mjs"></script>
   </head>
 
   <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
