--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Welcome to the Home Page of The Collectible's Auction, on this website you will find a range of items on display that are out for auction."
     />
     <link href="/styles/output.css" rel="stylesheet" />
-    <script type="module" src="/js/navBar/index.js"></script>
+    <script type="module" src="/js/navBar/index.mjs"></script>
     <title>Auction Website Home Page</title>
   </head>
 
