--- a/loginPage/index.html
+++ b/loginPage/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is the login page for the client." />
     <link href="/styles/output.css" rel="stylesheet" />
     <title>User login page</title>
-    <script type="module" src="/js/navBar/index.js"></script>
+    <script type="module" src="/js/navBar/index.mjs"></script>
   </head>
   <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
     <nav class="text-white">
