--- a/profile/userProfile/index.html
+++ b/profile/userProfile/index.html
@@ -9,7 +9,7 @@
     />
     <link href="/styles/output.css" rel="stylesheet" />
     <title>User profile page</title>
-    <script type="module" src="/js/navBar/index.js"></script>
+    <script type="module" src="/js/navBar/index.mjs"></script>
   </head>
   <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
     <nav class="text-white">
