--- a/registerPage/index.html
+++ b/registerPage/index.html
@@ -10,6 +10,7 @@
     <link href="/styles/output.css" rel="stylesheet" />
     <title>User register page</title>
     <script type="module" src="/js/navBar/index.mjs"></script>
+    <script type="module" src="/js/index.mjs"></script>
   </head>
   <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
     <!-- Navigation bar -->
@@ -77,7 +78,7 @@
             below to create an account with us.
           </p>
 
-          <form class="space-y-1 md:space-y-6 group" action="/profile/editProfile/" novalidate>
+          <form class="space-y-1 md:space-y-6 group" id="registerForm" novalidate>
             <div>
               <label
                 for="name"
@@ -108,6 +109,7 @@
                 type="email"
                 name="email"
                 id="email"
+                autocomplete="email"
                 class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-2.5 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full"
                 required
                 pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
@@ -129,6 +131,7 @@
                 type="password"
                 name="password"
                 id="password"
+                autocomplete="current-password"
                 class="peer bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block p-3 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 w-full"
                 minlength="8"
                 required
