added title to button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               class="h-20 w-30"
           /></a>
           <div class="md:hidden flex items-center px-10">
-            <button type="button" class="mobile-menu-button">
+            <button title="hamburger-menu" type="button" class="mobile-menu-button">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
