--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -81,7 +81,7 @@
           <form class="space-y-1 md:space-y-6 group" id="registerForm" novalidate>
             <div>
               <label
-                for="username"
+                for="name"
                 class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                 >Username</label
               >
