test code removed

--- a/auction/index.html
+++ b/auction/index.html
@@ -51,14 +51,14 @@
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
         >
-          <a href="/auctionPage/" class="hover:text-gray-400 py-2 px-5 block"
+          <a href="/auction/" class="hover:text-gray-400 py-2 px-5 block"
             >Auction</a
           >
-          <a href="/loginPage/" class="hover:text-gray-400 py-2 px-5 block"
+          <a href="/profile/login/" class="hover:text-gray-400 py-2 px-5 block"
             >Login</a
           >
           <a
-            href="/registerPage/"
+            href="/profile/register/"
             class="hover:text-white py-2 px-5 block rounded-md bg-slate-200 text-black transition hover:bg-slate-700"
             >Register</a
           >
@@ -141,11 +141,11 @@
         </h2>
         <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
         <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
-        <div
-          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full transition hover:bg-slate-800 hover:text-white shadow-lg"
-        >
+        <a href="/biddingPage/" class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full transition hover:bg-slate-800 hover:text-white shadow-lg">
+        <div>
           Bid
         </div>
+        </a>
       </div>
       <div
         class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
