--- a/biddingPage/index.html
+++ b/biddingPage/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Page that showcases a singlar item that is biddable."
+      content="This is where a user can bid on one listing."
     />
     <link href="/styles/output.css" rel="stylesheet" />
-    <title>Bidding page for single item.</title>
+    <title>Bidding area for one listing.</title>
+    <script
+      src="https://kit.fontawesome.com/f82c4356c6.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="/js/navBar/index.mjs"></script>
   </head>
+
   <body class="min-h-screen bg-gradient-to-b from-slate-800 to-slate-500">
+    <!-- Navigation bar -->
+
     <nav class="text-white">
       <div class="container mx-auto justify-between items-center md:flex">
         <div class="flex justify-between md:flex md:justify-between">
@@ -47,17 +54,56 @@
           <a href="/auction/" class="hover:text-gray-400 py-2 px-5 block"
             >Auction</a
           >
-          <a href="/profile/login/" class="hover:text-gray-400 py-2 px-5 block"
+          <a href="/loginPage/" class="hover:text-gray-400 py-2 px-5 block"
             >Login</a
           >
           <a
-            href="/profile/register/"
-            class="hover:text-gray-400 py-2 px-5 block border rounded-md"
+            href="/registerPage/"
+            class="hover:text-white py-2 px-5 block rounded-md bg-slate-200 text-black transition hover:bg-slate-700"
             >Register</a
           >
         </div>
       </div>
     </nav>
     <div class="border-b border-gray-500"></div>
+
+    <h1 class="text-white text-2xl text-center m-10">Bidding Area</h1>
+
+    <!--Auction listing-->
+    <div class="flex justify-center flex-wrap gap-20 px-20">
+      <div
+        class="rounded-lg p-5 flex flex-col items-center w-fit justify-center transition hover:scale-105"
+      >
+        <img
+          src="/images/catImage.jpg"
+          alt="auction item 1"
+          class="w-80 h-80 rounded-lg object-cover shadow-lg"
+        />
+      </div>
+      <div>
+        <h2 class="text-white text-2xl font-bold mt-5">
+          Example of Auctioned Item
+        </h2>
+        <p class="text-gray-400 text-sm mt-2">Ends in 4hrs 16mins</p>
+        <p class="text-gray-200 text-sm mt-2">Last bid: 10 coins</p>
+        <div
+          class="text-center bg-orange-200 text-black px-3 py-1 rounded-lg mt-5 w-full transition hover:bg-slate-800 hover:text-white shadow-lg"
+        >
+          Bid
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="flex justify-center">
+      <div
+      class="rounded-lg p-5 flex flex-col items-center w-fit justify-center"
+      >
+        <div
+        class="bg-slate-700 text-white px-5 py-1 rounded-md mt-5 w-full transition hover:bg-slate-800"
+      >
+        Show bidding history <i class="fa-solid fa-chevron-down"></i>
+      </div>
+      </div>
+    </div>
   </body>
 </html>
