--- a/profile/editProfile/index.html
+++ b/profile/editProfile/index.html
@@ -44,7 +44,7 @@
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
         >
-          <a href="/auction/" class="hover:text-gray-400 py-2 px-5 block"
+          <a href="/listings/" class="hover:text-gray-400 py-2 px-5 block"
             >Auction</a
           >
           <a href="/profile/login/" class="hover:text-gray-400 py-2 px-5 block"
@@ -66,18 +66,6 @@
         <div
           class="flex flex-col items-center justify-center bg-slate-800 rounded-lg p-10 m-10 shadow-lg w-full md:w-1/2 relative"
         >
-          <div class="absolute flex left-5 top-3 gap-5">
-            <div
-              class="w-15 h-10 text-center text-slate-200 flex items-center justify-center font-semibold"
-            >
-              1 Followers
-            </div>
-            <div
-              class="w-15 h-10 text-center text-slate-200 flex items-center justify-center font-semibold"
-            >
-              50 Following
-            </div>
-          </div>
           <div class="flex flex-col items-center justify-center">
             <img
               src="/images/profileImage.png"
@@ -95,5 +83,23 @@
         </div>
       </div>
     </div>
+    <footer class="fixed bottom-0 left-0 w-full p-4 bg-slate-800 shadow-lg md:flex md:items-center md:justify-between md:p-2 mt-10">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <img src="/images/websiteLogo.png"></a>All Rights Reserved TCA.
+      </span>
+      <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0 gap-10">
+          <li>
+              <a class="hover:underline me-4 md:me-6">About</a>
+          </li>
+          <li>
+              <a class="hover:underline me-4 md:me-6">Privacy Policy</a>
+          </li>
+          <li>
+              <a class="hover:underline me-4 md:me-6">Licensing</a>
+          </li>
+          <li>
+              <a class="hover:underline">Contact</a>
+          </li>
+      </ul>
+  </footer>
   </body>
 </html>
