--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -46,7 +46,7 @@
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 font-playfair navigation-menu"
         >
-          <a href="/auction/" class="hover:text-gray-400 py-2 px-5 block"
+          <a href="/listings/" class="hover:text-gray-400 py-2 px-5 block"
             >Auction</a
           >
           <a href="/profile/login/" class="hover:text-gray-400 py-2 px-5 block"
@@ -173,5 +173,29 @@
         </div>
       </div>
     </div>
+    <footer class="w-full p-4 bg-slate-800 shadow-lg justify-center h-30">
+      <div class="flex justify-between items-center flex-wrap">
+      <div>
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <img src="/images/websiteLogo.png"></a>All Rights Reserved TCA.
+        </span>
+      </div>
+      <div class="flex">
+        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0 gap-10">
+          <li>
+            <a class="hover:underline me-4 md:me-6">About</a>
+          </li>
+          <li>
+            <a class="hover:underline me-4 md:me-6">Privacy Policy</a>
+          </li>
+          <li>
+            <a class="hover:underline me-4 md:me-6">Licensing</a>
+          </li>
+          <li>
+            <a class="hover:underline">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </footer>
   </body>
 </html>
