--- a/listings/index.html
+++ b/listings/index.html
@@ -134,6 +134,9 @@
     </div>
     <!--Auction items-->
     <div class="flex justify-center flex-wrap gap-20 px-20" id="allListingsContainer"></div>
+    <div id="paginationContainer"></div>
+
+    <!--Footer-->
     <footer class="w-full p-4 bg-slate-800 shadow-lg justify-center h-30">
       <div class="flex justify-between items-center flex-wrap">
       <div>
